--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     <hr class="solid">
     <div class="footer">
-        <p>My Site | All Rights Reserved | mysite.com | Powered by urbancitycodes.com</p>
+        <p>My Site | All Rights Reserved | mysite.com | Powered by Alana Edwards</p>
     </div>
 </body>
 </html>
